# AdventOfCode2021

./: Cargo.toml
in/: 16small.in  22small.in
src/: alu.rs  beacon_scanner.rs  binary_diagnostic.rs  chiton.rs  dirac_dice.rs  dive.rs  dumbo_octopus.rs  extended_polymerization.rs  giant_squid.rs  hydrotermal_venture.rs  lanternfish.rs  packet_decoder.rs  passage_pathing.rs  reactor_reboot.rs  sea_cucumber.rs  segment_search.rs  smoke_basin.rs  snailfish.rs  sonar_sweep.rs  syntax_scoring.rs  transparent_origami.rs  treachery_whales.rs  trench_map.rs  trick_shot.rs
