[package]
name = "AdventOfCode2021"
version = "0.1.0"
authors = ["Adrian Zgorzałek <adrian@adek.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
scan-rules = "0.2.0"
# regex = "1.4.2"

[[bin]]
name = "day1"
path = "src/sonar_sweep.rs"