[package]
name = "AdventOfCode2021"
version = "0.1.0"
authors = ["Adrian Zgorzałek <adrian@adek.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
scan-rules = "0.2.0"
# regex = "1.4.2"

[[bin]]
name = "day1"
path = "src/sonar_sweep.rs"

[[bin]]
name = "day2"
path = "src/dive.rs"

[[bin]]
name = "day3"
path = "src/binary_diagnostic.rs"

[[bin]]
name = "day4"
path = "src/giant_squid.rs"

[[bin]]
name = "day5"
path = "src/hydrotermal_venture.rs"

[[bin]]
name = "day6"
path = "src/lanternfish.rs"

[[bin]]
name = "day7"
path = "src/treachery_whales.rs"

[[bin]]
name = "day8"
path = "src/segment_search.rs"

[[bin]]
name = "day9"
path = "src/smoke_basin.rs"

[[bin]]
name = "day10"
path = "src/syntax_scoring.rs"

[[bin]]
name = "day11"
path = "src/dumbo_octopus.rs"